<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.SplitBillActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/topcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order"
                            style="@style/Base.TextAppearance.AppCompat.Headline"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"/>

                        <TextView
                            android:id="@+id/orderID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/Base.TextAppearance.AppCompat.Headline"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Num"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dish_name"
                            android:layout_weight="1"
                            android:textAlignment="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"
                            android:layout_weight="1"
                            android:textAlignment="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price"
                            android:layout_weight="1"
                            android:textAlignment="center"/>


                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/actualOrderList"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:nestedScrollingEnabled="false"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/middlecard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/new_biill"
                            style="@style/Base.TextAppearance.AppCompat.Headline"
                            android:layout_weight="1"
                            android:textAlignment="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Num"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dish_name"
                            android:layout_weight="1"
                            android:textAlignment="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quantity"
                            android:layout_weight="1"
                            android:textAlignment="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price"
                            android:layout_weight="1"
                            android:textAlignment="center"/>


                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/newBillList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/buttonbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="0dp">

                <Button
                    android:id="@+id/cancelSplitBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>

                <Button
                    android:id="@+id/doneSplitBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

        </LinearLayout>

</ScrollView>
