<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/email_bill"
        android:layout_gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Headline"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:padding="10dp"
            android:layout_gravity="center_vertical"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/abc_test_com"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Skip"
            android:padding="10dp"
            android:layout_margin="10dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="done"
            android:padding="10dp"
            android:layout_margin="10dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_alignParentEnd="true"/>
        
    </RelativeLayout>
    
</LinearLayout>